--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -21,19 +21,21 @@
         }
 
         .event__content-body {
-            padding: 0 rem($gs-gutter / 2) rem($gs-gutter / 2);
-            float: left;
+            position: relative;
 
             @include mq(tablet) {
-                padding: 0 rem($gs-gutter);
+                float: left;
+                padding: 0 rem($gs-gutter) 0 0;
+                width: 58%;
             }
 
             @include mq(desktop) {
-                width: rem(gs-span(6) + $gs-gutter);
+                padding: 0 rem($gs-gutter);
+                width: 67%;
             }
 
             @include mq(mem-full) {
-                width: rem(gs-span(8) + $gs-gutter);
+                width: rem(gs-span(10) + $gs-gutter * 2);
             }
         }
 
@@ -69,6 +71,11 @@
 .event__description {
     margin-bottom: rem($gs-gutter * 2);
 
+    @include mq(mem-full) {
+        width: rem(gs-span(8) - $gs-gutter);
+        float: right;
+    }
+
     h2 {
         @include fs-headline(2);
         margin: rem(8px) 0 rem(16px);
@@ -100,18 +107,40 @@
     background-color: $mem-live-red-trans;
 
     .event__title {
-        @include fs-headline(4);
+        @include fs-headline(2);
+        font-weight: bold;
         color: $white;
-        padding: rem($gs-gutter / 2);
+        border-bottom: rem(1px) dotted $c-neutral6;
+        padding-bottom: rem(5px);
 
         @include mq(tablet) {
-            float: left;
-            width: rem(gs-span(2) + $gs-gutter * 2);
+            @include fs-headline(4);
             padding: 0 rem($gs-gutter) 0 0;
         }
 
         @include mq(mem-full) {
             width: rem(gs-span(2) + $gs-gutter * 2);
+            border-bottom: 0;
+            float: left;
+        }
+    }
+
+    .event__masthead {
+        position: relative;
+
+        .event__name {
+            @include fs-headline(5);
+            color: $white;
+            padding-top: rem($gs-baseline / 2);
+
+            @include mq(tablet) {
+                padding-top: rem($gs-baseline);
+                @include fs-headline(7);
+            }
+
+            @include mq(mem-full) {
+                padding-top: 0;
+            }
         }
     }
 }
@@ -122,21 +151,26 @@
     color: $white;
 
     .event__details {
-        
-        @include mq(tablet) {
+        padding-top: rem($gs-baseline / 2);
+
+        @include mq(mem-full) {
             padding: rem($gs-baseline / 2) rem($gs-gutter) 0 rem(gs-span(2) + $gs-gutter * 2);
         }
 
-        @include mq(mem-full) {
-            
-        }
-
         .event__time {
-            @include fs-headline(4);
+            @include fs-headline(2);
+
+            @include mq(tablet) {
+                @include fs-headline(4);
+            }
         }
 
         .event__location {
-            @include fs-headline(2);
+            @include fs-headline(1);
+
+            @include mq(tablet) {
+                @include fs-headline(2);
+            }
         }
     }
 
@@ -145,11 +179,11 @@
 
         @include mq(tablet) {
             float: left;
-            padding: rem($gs-baseline / 2) rem($gs-gutter) rem($gs-gutter) rem(gs-span(2) + $gs-gutter * 2);
+            padding-right: rem($gs-gutter);
         }
 
         @include mq(mem-full) {
-            
+            padding: rem($gs-baseline / 2) rem($gs-gutter) rem($gs-gutter) rem(gs-span(2) + $gs-gutter * 2);
         }
 
         .event__price-amount {
@@ -177,16 +211,22 @@
 
     .terms-info {
         color: $white;
-        width: rem(gs-span(3) + $gs-gutter * 2);
+        padding: 0 0 rem($gs-gutter);
 
         @include mq(tablet) {
+            width: rem(gs-span(3) + $gs-gutter * 2);
             float: left;
             padding-top: rem($gs-gutter);
         }
 
         a {
             color: $white;
-            text-decoration: underline;
+            padding-bottom: rem(2px);
+            border-bottom: rem(1px) solid $c-neutral8;
+
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
 
@@ -219,22 +259,42 @@
     clear: both;
     @include fs-textSans(1);
     color: $c-neutral2;
+    margin-bottom: rem($gs-gutter * 2);
 
-    @include mq(tablet) {
+    @include mq(desktop) {
         padding: rem(8px) rem($gs-gutter) rem($gs-gutter * 2 - 4) rem(gs-span(2) + $gs-gutter * 3);
+        margin-bottom: 0;
     }
 }
 
 .event__social {
-    float: left;
     width: rem(gs-span(2) + $gs-gutter * 2);
-    padding-left: rem($gs-gutter);
+    margin-bottom: rem($gs-gutter * 2);
+    padding-right: rem($gs-gutter);
+
+    @include mq(tablet) {
+        float: left;
+    }
+
+    @include mq(desktop) {
+        
+    }
+
+    @include mq(mem-full) {
+        top: 0;
+        left: 0;
+    }
 
     .event__social__header {
-        border-top: rem(1px) solid $c-neutral6;
-        @include fs-textSans(1);
-        padding-bottom: rem($gs-baseline / 2);
-        padding-top: rem(3px);
+        display: none;
+
+        @include mq(desktop) {
+            display: block;
+            border-top: rem(1px) solid $c-neutral6;
+            @include fs-textSans(1);
+            padding-bottom: rem($gs-baseline / 2);
+            padding-top: rem(3px);
+        }
     }
 
     .social {
@@ -272,10 +332,13 @@
 .event-info {
     background-color: $c-neutral7;
     margin-bottom: rem($gs-gutter);
-    width: rem(gs-span(4));
     padding: rem($gs-gutter);
-    float: left;
     @include fs-data(4);
+    
+    @include mq(tablet) {
+        float: left;
+        width: rem(gs-span(4));
+    }
 
     .event-info__name {
         @include fs-header(2);
@@ -370,15 +433,6 @@
     background-color: #e1e1e1;
     margin-bottom: rem(20px);
     width: rem(gs-span(4));
-}
-
-.event__masthead {
-    position: relative;
-
-    .event__name {
-        @include fs-headline(7);
-        color: $white;
-    }
 }
 
 .item__meta {
