Add Membership conversion pixel

--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -12,4 +12,5 @@
 
     @fragments.analytics.googleJoinerConversion()
     @fragments.analytics.facebookJoinerConversion()
+    @fragments.analytics.membershipJoinerConversion()
 }
