--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -69,4 +69,5 @@
 
     @fragments.analytics.googleJoinerConversion(tier)
     @fragments.analytics.facebookJoinerConversion(tier)
+    @fragments.analytics.membershipJoinerConversion()
 }
