--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -25,7 +25,7 @@
                         @fragments.event.item(heroEvent, true)
                     }
                 </ul>
-                <ul class="events-list events-list--items-3 u-unstyled">
+                <ul class="events-list events-list--items-3 events-list__hero-descendant u-unstyled">
                     @for(event <- eventPortfolio.priority) {
                         @fragments.event.item(event)
                     }
