--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -245,6 +245,14 @@ div.event {
             }
         }
 
+        .events-list__hero-descendant {
+            .events-list__item {
+                @include mq(tablet) {
+                    height: rem(450px);
+                }
+            }
+        }
+
     }
 }
 
