--- a/frontend/app/views/fragments/analytics/facebookJoinerConversion.scala.html
+++ b/frontend/app/views/fragments/analytics/facebookJoinerConversion.scala.html
@@ -1,15 +1,6 @@
 @(tier: com.gu.membership.salesforce.Tier.Tier = com.gu.membership.salesforce.Tier.Friend)
 
-@import com.gu.membership.salesforce.Tier
 @import configuration.Config
-
-@trackingId = @{
-    tier match {
-        case Tier.Patron => "6019968011389"
-        case Tier.Partner => "6019967995989"
-        case Tier.Friend => "6019967974789"
-    }
-}
 
 @if(Config.stage == "PROD") {
     <script>
@@ -25,7 +16,7 @@
             }
         })();
         window._fbq = window._fbq || [];
-        window._fbq.push(['track', '@trackingId', {'value': '0.00', 'currency': 'GBP'}]);
+        window._fbq.push(['track', '@Config.facebookJoinerConversionTrackingId(tier)', {'value': '0.00', 'currency': 'GBP'}]);
     </script>
-    <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=@trackingId&amp;cd[value]=0.00&amp;cd[currency]=GBP&amp;noscript=1" /></noscript>
+    <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=@Config.facebookJoinerConversionTrackingId(tier)&amp;cd[value]=0.00&amp;cd[currency]=GBP&amp;noscript=1" /></noscript>
 }
