--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -10,7 +10,5 @@
 
     @fragments.joiner.completePurchase(ebIFrameDetail)
 
-    @fragments.analytics.googleJoinerConversion()
-    @fragments.analytics.facebookJoinerConversion()
-    @fragments.analytics.membershipJoinerConversion()
+    @fragments.analytics.joinerConversion()
 }
