--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -67,7 +67,5 @@
 
     @fragments.joiner.completePurchase(ebIFrameDetail)
 
-    @fragments.analytics.googleJoinerConversion(tier)
-    @fragments.analytics.facebookJoinerConversion(tier)
-    @fragments.analytics.membershipJoinerConversion()
+    @fragments.analytics.joinerConversion(tier)
 }
