--- a/frontend/app/views/fragments/analytics/googleJoinerConversion.scala.html
+++ b/frontend/app/views/fragments/analytics/googleJoinerConversion.scala.html
@@ -1,4 +1,4 @@
-@(tier: com.gu.membership.salesforce.Tier.Tier = com.gu.membership.salesforce.Tier.Friend)
+@(tier: com.gu.membership.salesforce.Tier.Tier)
 
 @import configuration.Config
 
