--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -157,9 +157,9 @@
 
             <div class="event-info">
 
-                <div class="event-info__name">@event.name.text</div>
-                <div class="event-info__time"><i class="icon-sprite icon-sprite-large-early_booking icon-sprite--small"></i>@prettyDateWithTime(event.start)</div>
-                <div class="event-info__location">
+                <div class="event-info__name event-info--line-divider">@event.name.text</div>
+                <div class="event-info__time event-info--line-divider"><i class="icon-sprite icon-sprite-large-early_booking icon-sprite--small"></i>@prettyDateWithTime(event.start)</div>
+                <div class="event-info__location event-info--line-divider">
                     <span class="event-info__venue-name"><i class="icon-sprite icon-sprite-location icon-sprite--small"></i>@event.venue.name</span>,
                     <span class="event-info__address">@event.eventAddressLine
                     </span>
@@ -167,7 +167,7 @@
                 
                 @for(ticket <- event.ticketClassesHead) {
 
-                    <div class="event-info__tickets">
+                    <div class="event-info__tickets event-info--line-divider">
 
                         <div class="ticket-info">
                             <div class="ticket-info__header"><i class="icon-sprite icon-sprite-book_tickets icon-sprite--small"></i>Ticket sales</div>
@@ -182,12 +182,12 @@
                         </div>
 
                         @if(ticket.free) {
-                            <div class="event-info__price">
+                            <div class="event-info__price event-info--line-divider">
                                 <span class="event-info__price-amount js-event-price">Free</span>
                             </div>
                         } else {
                             @for(pricing <- ticket.cost) {
-                                <div class="event-info__price">
+                                <div class="event-info__price event-info--line-divider">
                                     <span class="event-info__price-amount js-event-price">@pricing.formattedPrice</span>
                                     <!-- <span class="event__price-note js-event-price-note"> per ticket</span> -->
                                 </div>
