--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -243,6 +243,11 @@
                 overflow: hidden;
                 font-size: 0;
 
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+
                 @include mq(tablet) {
                     position: static;
                     max-width: rem(460px);
