--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -55,4 +55,6 @@
         <h2 class="content__headline">Find more Guardian Live events</h2>
         <a class="action" href="/events">See all events</a>
     </section>
+
+    @fragments.analytics.omnitureEventBriteOrderTracking()
 }
