--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -55,7 +55,7 @@
         <div class="home-slice__inner u-cf">
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homeslice/740-Home-patrons.jpg")" alt="" />
+                    <img src="@Asset.at("images/homeslice/740-Home-patrons.jpg")" alt="" class="responsive-img" />
                 </div>
                 <div class="home-slice__headline-block">
                     <h2 class="home-slice__headline">Membership fuels our journalism</h2>
@@ -96,7 +96,7 @@
         <div class="home-slice__inner u-cf">
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homeslice/740-crowd.jpg")" alt="" />
+                    <img src="@Asset.at("images/homeslice/740-crowd.jpg")" alt="" class="responsive-img" />
                 </div>
                 <div class="home-slice__headline-block">
                     <h2 class="home-slice__headline">Founding members: join us at the start</h2>
