--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -56,7 +56,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homeslice/patrons/740-backstage.jpg")" alt="" />
+                    <img src="@Asset.at("images/homeslice/patrons/740-backstage.jpg")" alt="" class="responsive-img" />
                 </div>
                 <div class="home-slice__offset-copy">
                     <p class="home-slice__copy">In return for your support, Patrons are given a behind-the-scenes view of how the Guardian operates.  For example, tour our newsroom, visit our printing presses or attend a campaign lecture.</p>
