--- a/frontend/app/views/fragments/analytics/googleRemarketing.scala.html
+++ b/frontend/app/views/fragments/analytics/googleRemarketing.scala.html
@@ -1,7 +1,7 @@
 @import configuration.Config
 
 @if(Config.stage == "PROD") {
-    <div style="display: none;">
+    <div class="is-hidden">
         <script type="text/javascript">
             var google_conversion_id = 971225648;
             var google_custom_params = window.google_tag_params;
