inlined script and used require instead

--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -56,5 +56,10 @@
         <a class="action" href="/events">See all events</a>
     </section>
 
-    @fragments.analytics.omnitureEventBriteOrderTracking()
+    <script type="text/javascript">
+        require(['omniture'], function () {
+            s.products = 'event;@event.id;';
+            s.events = 'order';
+        });
+    </script>
 }
