--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -520,7 +520,7 @@ div.event {
         width: rem(25px);
     }
 
-    .icon-sprite-evenbrite {
+    .icon-sprite-eventbrite {
         margin-top: rem(8px);
     }
 
