changed config to full url, updated in view

--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -48,7 +48,7 @@
 
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Before the event</h2>
-        <p>Read related articles and what other members have to say at <a href="@(Config.guardianUrl + "/membership")">theguardian.com/membership</a>. You'll also see all the latest news, highlights and ideas from our membership community.</p>
+        <p>Read related articles and what other members have to say at <a href="@(Config.guardianMembershipUrl)">theguardian.com/membership</a>. You'll also see all the latest news, highlights and ideas from our membership community.</p>
     </section>
 
     <section class="content__container content__container--slim">
