--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -12,11 +12,7 @@
         <div class="event-summary">
             <div class="event-item__media">
                 <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="@event.name.text" data-class="responsive-img"></div>
-            </div>@*
-
-                  // Inline-block whitespace
-
-           *@<div class="event-item__meta">
+            </div><div class="event-item__meta">
                 <h2 class="event-item__title">
                     @event.name.text
                 </h2>
