--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -73,28 +73,31 @@
             </div>
             @for(ticket <- event.ticketClassesHead) {
 
-                <div class="event__tickets">
+                <div class="event__tickets__wapper">
+                    <div class="event__tickets">
 
-                    @if(ticket.free) {
-                        <div class="event__price">
-                            <span class="event__price-amount js-event-price">Free</span>
-                        </div>
-                    } else {
-                        @for(pricing <- ticket.cost) {
+                        @if(ticket.free) {
                             <div class="event__price">
-                                <span class="event__price-amount js-event-price">@pricing.formattedPrice</span>
-                                <!-- <span class="event__price-note js-event-price-note"> per ticket</span> -->
+                                <span class="event__price-amount js-event-price">Free</span>
                             </div>
-                            <div class="event__trail">
-                                <span class="event__trail-tag js-event-price-tag">Partners/Patrons </span>
-                                <span class="event__trail-upsell js-event-price-discount">@pricing.discountPrice</span>
-                                <span class="event__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
-                            </div>
+                        } else {
+                            @for(pricing <- ticket.cost) {
+                                <div class="event__price">
+                                    <span class="event__price-amount js-event-price">@pricing.formattedPrice</span>
+                                    <!-- <span class="event__price-note js-event-price-note"> per ticket</span> -->
+                                </div>
+                                <div class="event__trail">
+                                    <span class="event__trail-tag js-event-price-tag">Partners/Patrons </span>
+                                    <span class="event__trail-upsell js-event-price-discount">@pricing.discountPrice</span>
+                                    <span class="event__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
+                                </div>
+                            }
                         }
-                    }
-                </div>
+                    </div>
 
                 @ticketCta
+
+                </div>
             }
             <div class="header-bar__guardian-live-logo">
                 <i class="icon-sprite icon-sprite-guardian-live"></i>
