added isDev flag to guardian object

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -53,7 +53,8 @@
                 widths: [@Config.eventImageWidths.mkString(",")],
                 ratios: [@Config.eventImageRatios.mkString(",")]
             }
-        }
+        },
+        isDev: @(Config.stage == "DEV")
     };
 
     (function(isModern) {
