added nonAMD js! plugin to require

--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -53,7 +53,7 @@
     </section>
 
     <script type="text/javascript">
-        require(['omniture'], function () {
+        require(['js!omniture'], function () {
             s.products = 'event;@event.id;';
             s.events = 'order';
         });
