--- a/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
@@ -8,7 +8,8 @@
         apiName: 'require',
         paths: {
             zxcvbn: '@Asset.at("javascripts/lib/zxcvbn/zxcvbn.js")',
-            'ophan/ng': '@Config.ophanJsUrl'
+            'ophan/ng': '@Config.ophanJsUrl',
+            omniture: '@Asset.at("javascripts/lib/omniture/omniture.js")'
         }
     };
 </script>
