--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -11,7 +11,7 @@
 
 <!DOCTYPE html>
 
-<html class="js-off @htmlClass">
+<html class="js-off id--signed-out @htmlClass">
     <head>
         <meta charset="utf-8">
         <meta name="viewport"                       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
