--- a/frontend/assets/stylesheets/utility/_hidden.scss
+++ b/frontend/assets/stylesheets/utility/_hidden.scss
@@ -9,3 +9,27 @@
         display: none !important;
     }
 }
+
+/**
+ * User state
+ */
+
+.id--signed-out .sign-in-required {
+    display: none;
+}
+
+.id--signed-in .sign-in-hidden {
+    display: none !important;
+}
+
+.tier-required {
+    display: none !important;
+}
+
+.member--has-tier .tier-required {
+    display: block !important;
+}
+
+.member--has-tier .tier-hidden {
+    display: none !important;
+}
