split social css to a seprate file

--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -86,7 +86,7 @@ body {
 // this alignment is too perfect
 %page-container,
 .page-container {
-    background-color: #ffffff;
+    background-color: $white;
     padding: 0 rem($gs-gutter / 2);
 
     @include mq(tablet) {
