--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -6,6 +6,7 @@
    ========================================================================== */
 @import 'module/facia/_items';
 @import 'module/facia/_row-pattern';
+@import 'module/_social';
 /* ==========================================================================
    Memebership components
    ========================================================================== */
