--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -14,12 +14,12 @@
             @include mq(tablet) {
                 float: left;
                 padding: 0 rem($gs-gutter) 0 0;
-                width: 58%;
+                width: rem(gs-span(5) + $gs-gutter * 2);
             }
 
             @include mq(desktop) {
                 padding: 0 rem($gs-gutter);
-                width: 67%;
+                width: rem(gs-span(8) + $gs-gutter * 2);
             }
 
             @include mq(mem-full) {
@@ -278,43 +278,14 @@
         display: none;
 
         @include mq(desktop) {
-            display: block;
+            // Hiding soical bottons this for now
+            display: none;
+            // display: block;
             border-top: rem(1px) solid $c-neutral6;
             @include fs-textSans(1);
             padding-bottom: rem($gs-baseline / 2);
             padding-top: rem(3px);
         }
-    }
-
-    .social {
-        height: rem(32px);
-        margin-left: rem(-$gs-gutter / 5);
-    }
-
-    .social__item {
-        float: left;
-        width: rem(36px);
-        padding: 0 rem($gs-gutter / 5);
-
-        @include mq(tablet) {
-            width: rem(40px);
-            padding-right: 0;
-        }
-    }
-    .social__action {
-        display: block;
-    }
-
-    $social-icon: (
-        width: rem(32px),
-        height: rem(32px),
-        color: $c-neutral2,
-        space-in-between: rem(2px)
-    );
-
-    .social-icon {
-        @extend %icon-holder-circle;
-        border-color: map-get($social-icon, color);
     }
 }
 
@@ -326,7 +297,7 @@
     
     @include mq(tablet) {
         float: left;
-        width: rem(gs-span(4));
+        width: gs-span(4);
     }
 
     .event-info--line-divider {
