Remove redundant action classes

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -76,9 +76,7 @@
     margin: $gs-baseline;
 }
 
-.action--join,
-.action--logged-out,
-.action--logged-in {
+.action--join {
     text-align: left;
     background-color: $mem-buttonBlue;
     color: $white;
