Clean up unused styles and markup

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -20,7 +20,7 @@
                 <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
                     connects you to the conversations that matter and introduces you to fellow members who share
                     your interests.</p>
-                <a class="action action--join home-slice__action" href="/join">Join today</a>
+                <a class="action home-slice__action" href="/join">Join today</a>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
                 <p class="home-slice__copy">Members can attend events that take the power of open journalism
                     from print and digital into live experiences.
                 </p>
-                <a class="action action--join" href="/events">See our live events</a>
+                <a class="action" href="/events">See our live events</a>
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
                 <div class="home-slice__offset-copy">
                     <blockquote class="home-slice__copy--quote">The only relationship our journalists have is with our readers. Membership gives the real possibility of deepening the intense bond between the producers and consumers of the Guardian.</blockquote>
                     <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
-                    <a class="action action--join" href="/patrons">Start your journey as Patron</a>
+                    <a class="action" href="/patrons">Start your journey as Patron</a>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                     The building will be a hub for big ideas and stimulating conversations. It will host events,
                     activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.
                 </p>
-                <a class="action action--join" target="_blank" href="@Config.guardianMembershipBuildingSpaceUrl">More about the building</a>
+                <a class="action" target="_blank" href="@Config.guardianMembershipBuildingSpaceUrl">More about the building</a>
                 <a class="action action--secondary-button" target="_blank" href="@Config.guardianMembershipBuildingBlogUrl">Building progress blog</a>
             </div>
         </div>
@@ -119,7 +119,7 @@
                     <p class="home-slice__copy">
                         Help to build and shape this community by joining as a Founding Partner or Patron,
                         with the guarantee that the price you pay today will not rise.</p>
-                    <a class="action action--join" href="/join" id="qa-join">Join today</a>
+                    <a class="action" href="/join" id="qa-join">Join today</a>
                 </div>
             </div>
         </div>
