--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -13,7 +13,7 @@
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">Guardian Membership brings together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity to shape it.</p>
                 <p class="home-slice__copy">Join now as a Founding Partner or Patron and we guarantee that the price you pay today will not rise.</p>
-                <a class="action action--join" href="/join">Join today</a>
+                <a class="action" href="/join">Join today</a>
             </div>
         </div>
     </div>
