--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -5,7 +5,7 @@
 
 @main("Join", pageInfo=pageInfo) {
 
-    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
+    <section>
 
         @fragments.layout.sectionHeader("Become a member")
 
