--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -63,7 +63,7 @@
                     }
                 }
 
-                <input type="submit" class="action action--join" value="Join today"/>
+                <input type="submit" class="action" value="Join today"/>
 
             </form>
         </section>@*
