--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -14,7 +14,7 @@
 
             <h2 class="section-sub-headline">Current Membership Summary</h2>
 
-            <section class="joiner-section joiner-section--no-border">
+            <section>
                 @fragments.tier.summary(subscriptionDetails)
             </section>
         }
