--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -15,7 +15,7 @@
         }
 
         <div class="actions js-waiting-container">
-            <button type="submit" class="submit-input action action--join js-submit-input">
+            <button type="submit" class="submit-input action js-submit-input">
             @Html(tier.fold(ctaTextPrepend)(tier =>
                 ctaTextPrepend + " £<span class=\"js-cta-payment-option-price\">" +
                     Benefits.details(tier).pricing.fold(0)(_.yearly) + "</span> " + ctaTextAppend
