--- a/frontend/app/views/fragments/joiner/completePurchase.scala.html
+++ b/frontend/app/views/fragments/joiner/completePurchase.scala.html
@@ -15,6 +15,6 @@
     </section>
 } else {
     <section class="content__container content__container--slim">
-        <a class="action action--join" href="/events">Get Started</a>
+        <a class="action" href="/events">Get Started</a>
     </section>
 }
