--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -24,7 +24,7 @@
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                     @fragments.benefits.priceInfo(Benefits.details(Tier.Patron))
                     <div class="join-today__teaser">
-                        <a class="action action--join js-opt-become-member" href="/join/patron/enter-details">
+                        <a class="action" href="/join/patron/enter-details">
                             <span class="action__text">Become a Patron today</span>
                         </a>
                     </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="home-slice__offset-copy">
                     <p class="home-slice__copy">In return for your support, Patrons are given a behind-the-scenes view of how the Guardian operates.  For example, tour our newsroom, visit our printing presses or attend a campaign lecture.</p>
-                    <a class="action action--join home-slice__action js-opt-become-member" href="/join/patron/enter-details">Become a Patron today</a>
+                    <a class="action home-slice__action" href="/join/patron/enter-details">Become a Patron today</a>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                     @fragments.benefits.priceInfo(Benefits.details(Tier.Patron))
                     <div class="join-today__teaser">
-                        <a class="action action--join js-opt-become-member" href="/join/patron/enter-details">
+                        <a class="action" href="/join/patron/enter-details">
                             <span class="action__text">Become a Patron today</span>
                         </a>
                     </div>
