--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -13,12 +13,12 @@
         <div class="signin__actions">
             <div class="signin__login">
                 <h3 class="signin__action-prompt">Sign in to your Guardian account</h3>
-                <a class="action action--join" href="@Config.idWebAppSigninUrl(returnUrl)">Sign in</a>
+                <a class="action" href="@Config.idWebAppSigninUrl(returnUrl)">Sign in</a>
             </div>
             <div class="signin__register">
                 <h3 class="signin__action-prompt">New to the Guardian?</h3>
                 <h4>Please take a few short moments to register</h4>
-                <a class="action action--join" href="@Config.idWebAppRegisterUrl(returnUrl)">Register Now</a>
+                <a class="action" href="@Config.idWebAppRegisterUrl(returnUrl)">Register Now</a>
             </div>
         </div>
 
