--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -2,11 +2,220 @@
    An event on an event page
    ========================================================================== */
 
-.event {
-    @extend %page-container; 
-    background-color: $white;
+.event__content__header {
+    background-color: $mem-live-red-trans;
+    color: $white;
+}
 
-    .event__content {
+.event__content__header--shade {
+    background-color: $mem-live-accent-trans;
+}
+
+.event__content__container {
+    margin: 0 auto;
+    padding: rem($gs-baseline / 2) rem($gs-gutter / 2) rem($gs-gutter + $gs-baseline);
+    background-color: transparent;
+
+    @include mq(tablet) {
+        padding: rem($gs-baseline / 2) rem($gs-gutter) rem($gs-gutter + $gs-baseline);
+    }
+
+    @include mq(desktop) {
+        width: rem(gs-span(12) + $gs-gutter * 2);
+    }
+
+    @include mq(mem-full) {
+        width: rem(gs-span(14) + $gs-gutter * 2);
+    }
+}
+
+.event__content__container--details {
+    padding: 0 rem($gs-gutter /2);
+    position: relative;
+
+    @include mq(tablet) {
+        padding: 0 rem($gs-gutter);
+    }
+}
+
+.event__masthead {
+    position: relative;
+
+    .event__name {
+        @include fs-headline(5);
+        color: $white;
+        padding-top: rem($gs-baseline / 2);
+
+        @include mq(tablet) {
+            padding-top: rem($gs-baseline);
+            @include fs-headline(7);
+        }
+
+        @include mq(mem-full) {
+            padding-top: 0;
+        }
+    }
+}
+
+.event__title {
+    @include fs-headline(2);
+    font-weight: bold;
+    color: $white;
+    border-bottom: rem(1px) dotted $border-bottom-color;
+    padding-bottom: rem(5px);
+
+    @include mq(tablet) {
+        @include fs-headline(4);
+        padding: 0 rem($gs-gutter) 0 0;
+    }
+
+    @include mq(mem-full) {
+        width: rem(gs-span(2) + $gs-gutter * 2);
+        border-bottom: 0;
+        float: left;
+    }
+}
+
+.header-bar__guardian-live-logo {
+    position: absolute;
+    bottom: rem($gs-gutter / 2 + 2);
+    right: rem($gs-gutter / 2);
+
+    @include mq(tablet) {
+        right: rem($gs-gutter);
+    }
+
+    .icon-sprite-guardian-live {
+        background-size: rem(30px) auto;
+        width: rem(30px);
+        height: rem(44px);
+
+
+        @include mq(tablet) {
+            background-size: 100% auto;
+            width: rem(62px);
+            height: rem(90px);
+        }
+    }
+}
+
+.event__tickets__wapper {
+    padding: rem($gs-gutter) 0;
+
+    @include mq(mem-full) {
+        padding: rem($gs-gutter) rem($gs-gutter) rem($gs-gutter) rem(gs-span(2) + $gs-gutter * 2);
+    }
+
+    .event__tickets {
+        color: $white;
+
+        @include mq(tablet) {
+            float: left;
+            padding-right: rem($gs-gutter);
+        }
+        
+        .event__price-amount {
+            @include fs-header(5);
+        }
+
+        .event__trail {
+            @include fs-textSans(1);
+        }
+    }
+    
+    .action {
+        background-color: $black;
+
+        @include mq(tablet) {
+            float: left;
+            margin: rem(6px $gs-gutter 0 0);
+        }
+
+        &:hover {
+            background-color: $c-neutral3;
+        }
+    }
+
+    .terms-info {
+        @include fs-textSans(1);
+        color: $white;
+        padding-top: rem(12px);
+
+        @include mq(tablet) {
+            width: rem(gs-span(3) + $gs-gutter * 2);
+            float: left;
+        }
+
+        a {
+            color: $white;
+            padding-bottom: rem(2px);
+            border-bottom: rem(1px) solid $mem-underline-white-trans;
+
+            &:hover {
+                text-decoration: none;
+                border-bottom: rem(1px) solid $white; 
+            }
+        }
+    }
+}
+
+.event__details {
+    padding-top: rem($gs-baseline / 2);
+
+    @include mq(mem-full) {
+        padding: rem($gs-baseline / 2) rem($gs-gutter) 0 rem(gs-span(2) + $gs-gutter * 2);
+    }
+
+    .event__time {
+        @include fs-headline(2);
+
+        @include mq(tablet) {
+            @include fs-headline(4);
+        }
+    }
+
+    .event__location {
+        @include fs-headline(1);
+
+        @include mq(tablet) {
+            @include fs-headline(2);
+            margin-bottom: rem(4px);
+        }
+    }
+}
+
+.event__picture-byline {
+    clear: both;
+    @include fs-textSans(1);
+    color: $c-neutral2;
+    margin-bottom: rem($gs-gutter * 2);
+
+    @include mq(mem-full) {
+        padding: rem(8px) rem($gs-gutter) rem($gs-gutter * 2 - 4) rem(gs-span(2) + $gs-gutter * 2);
+        margin-bottom: 0;
+    }
+}
+
+.event__content {
+    background-color: $white;
+    padding: 0;
+
+    .event__content-wapper {
+        padding: 0 rem($gs-gutter / 2);
+
+        @include mq(tablet) {
+            width: rem(gs-span(9) + $gs-gutter * 2);
+            padding: 0;
+            margin: 0 auto;
+        }
+
+        @include mq(desktop) {
+            width: rem(gs-span(12));
+        }
+
+        @include mq(mem-full) {
+            width: rem(gs-span(14));
+        }
 
         .event__content-body {
             position: relative;
@@ -14,16 +223,15 @@
             @include mq(tablet) {
                 float: left;
                 padding: 0 rem($gs-gutter) 0 0;
-                width: rem(gs-span(5) + $gs-gutter * 2);
+                width: rem(gs-span(5) + $gs-gutter * 3);
             }
 
             @include mq(desktop) {
-                padding: 0 rem($gs-gutter);
-                width: rem(gs-span(8) + $gs-gutter * 2);
+                width: rem(gs-span(8) + $gs-gutter);
             }
 
             @include mq(mem-full) {
-                width: rem(gs-span(10) + $gs-gutter * 2);
+                width: rem(gs-span(10) + $gs-gutter);
             }
         }
 
@@ -70,196 +278,6 @@
     }
 }
 
-.event__content__header {
-    width: 100%;
-    background-color: $mem-live-red-trans;
-
-    .event__title {
-        @include fs-headline(2);
-        font-weight: bold;
-        color: $white;
-        border-bottom: rem(1px) dotted $border-bottom-color;
-        padding-bottom: rem(5px);
-
-        @include mq(tablet) {
-            @include fs-headline(4);
-            padding: 0 rem($gs-gutter) 0 0;
-        }
-
-        @include mq(mem-full) {
-            width: rem(gs-span(2) + $gs-gutter * 2);
-            border-bottom: 0;
-            float: left;
-        }
-    }
-
-    .event__masthead {
-        position: relative;
-
-        .event__name {
-            @include fs-headline(5);
-            color: $white;
-            padding-top: rem($gs-baseline / 2);
-
-            @include mq(tablet) {
-                padding-top: rem($gs-baseline);
-                @include fs-headline(7);
-            }
-
-            @include mq(mem-full) {
-                padding-top: 0;
-            }
-        }
-    }
-}
-
-.event__content__header--shade {
-    background-color: $mem-live-accent-trans;
-    padding: 0;
-    color: $white;
-
-    .event__details {
-        padding-top: rem($gs-baseline / 2);
-
-        @include mq(mem-full) {
-            padding: rem($gs-baseline / 2) rem($gs-gutter) 0 rem(gs-span(2) + $gs-gutter * 2);
-        }
-
-        .event__time {
-            @include fs-headline(2);
-
-            @include mq(tablet) {
-                @include fs-headline(4);
-            }
-        }
-
-        .event__location {
-            @include fs-headline(1);
-
-            @include mq(tablet) {
-                @include fs-headline(2);
-                margin-bottom: rem(4px);
-            }
-        }
-    }
-
-    .event__tickets__wapper {
-        @include clearfix;
-        padding: rem($gs-gutter) 0;
-
-        @include mq(mem-full) {
-            padding: rem($gs-gutter) rem($gs-gutter) rem($gs-gutter) rem(gs-span(2) + $gs-gutter * 2);
-        }
-    }
-
-    .event__tickets {
-        color: $white;
-
-        @include mq(tablet) {
-            float: left;
-            padding-right: rem($gs-gutter);
-        }
-        
-        .event__price-amount {
-            @include fs-header(5);
-        }
-
-        .event__trail {
-            @include fs-textSans(1);
-        }
-        
-    }
-
-    .action {
-        background-color: $black;
-        margin-right: rem($gs-gutter);
-
-        @include mq(tablet) {
-            float: left;
-            margin: rem(6px $gs-gutter 0 0);
-        }
-
-        &:hover {
-            background-color: $c-neutral3;
-        }
-    }
-
-    .terms-info {
-        @include fs-textSans(1);
-        color: $white;
-        padding-top: rem(12px);
-
-        @include mq(tablet) {
-            width: rem(gs-span(3) + $gs-gutter * 2);
-            float: left;
-        }
-
-        a {
-            color: $white;
-            padding-bottom: rem(2px);
-            border-bottom: rem(1px) solid $mem-underline-white-trans;
-
-            &:hover {
-                text-decoration: none;
-                border-bottom: rem(1px) solid $white; 
-            }
-        }
-    }
-
-    .header-bar__guardian-live-logo {
-        position: absolute;
-        bottom: rem($gs-gutter / 2 + 2);
-        right: rem($gs-gutter / 2);
-
-        @include mq(tablet) {
-            right: rem($gs-gutter);
-        }
-
-        .icon-sprite-guardian-live {
-            background-size: 30px auto;
-            width: 30px;
-            height: 44px;
-
-
-            @include mq(tablet) {
-                background-size: 100% auto;
-                width: 62px;
-                height: 90px;
-            }
-        }
-    }
-}
-
-.event__content-container {
-    @extend %page-container;
-    padding: rem($gs-baseline / 2) rem($gs-gutter / 2) rem($gs-gutter + $gs-baseline);
-    background-color: transparent;
-
-    @include mq(tablet) {
-        padding: rem($gs-baseline / 2) rem($gs-gutter) rem($gs-gutter + $gs-baseline);
-    }
-}
-
-.event__content-container--details {
-    padding: 0 rem($gs-gutter /2);
-
-    @include mq(tablet) {
-        padding: 0 rem($gs-gutter);
-    }
-}
-
-.event__picture__byline {
-    clear: both;
-    @include fs-textSans(1);
-    color: $c-neutral2;
-    margin-bottom: rem($gs-gutter * 2);
-
-    @include mq(desktop) {
-        padding: rem(8px) rem($gs-gutter) rem($gs-gutter * 2 - 4) rem(gs-span(2) + $gs-gutter * 3);
-        margin-bottom: 0;
-    }
-}
-
 .event__social {
     width: rem(gs-span(2) + $gs-gutter * 2);
     margin-bottom: rem($gs-gutter * 2);
@@ -273,19 +291,19 @@
         top: 0;
         left: 0;
     }
+}
 
-    .event__social__header {
+.event__social__header {
+    display: none;
+
+    @include mq(desktop) {
+        // Hiding soical bottons this for now
         display: none;
-
-        @include mq(desktop) {
-            // Hiding soical bottons this for now
-            display: none;
-            // display: block;
-            border-top: rem(1px) solid $c-neutral6;
-            @include fs-textSans(1);
-            padding-bottom: rem($gs-baseline / 2);
-            padding-top: rem(3px);
-        }
+        // display: block;
+        border-top: rem(1px) solid $c-neutral6;
+        @include fs-textSans(1);
+        padding-bottom: rem($gs-baseline / 2);
+        padding-top: rem(3px);
     }
 }
 
@@ -298,11 +316,6 @@
     @include mq(tablet) {
         float: left;
         width: gs-span(4);
-    }
-
-    .event-info--line-divider {
-        border-top: rem(1px) solid $c-neutral3;
-        padding: rem(5px) 0;
     }
 
     .event-info__name {
@@ -360,6 +373,10 @@
 
 }
 
+.event-info--line-divider {
+    border-top: rem(1px) solid $c-neutral3;
+    padding: rem(5px) 0;
+}
 
 .ticket-info {
 
@@ -378,8 +395,6 @@
         }
     }
 }
-
-
 
 /* ==========================================================================
    Temp events hacky stuff (this needs a revisit once design has been confirmed)
